working version for Spring Boot 3 and SpringDoc2 completed